fixed popup buttons spacing on ios devices

--- a/app/styles/templates/components/_message_box.scss
+++ b/app/styles/templates/components/_message_box.scss
@@ -16,6 +16,9 @@
   .button {
     margin-left: 0.3rem;
     text-decoration: none;
+    @media #{$small-only} {
+      padding: 0.7rem;
+    }
   }
 
   .closeLink {
